fix: horizontal scrolling .place__content

--- a/blocks/cover.css
+++ b/blocks/cover.css
@@ -37,6 +37,7 @@
     margin: 64px 0 0 0;
     min-height: 385px;
     width: 100vw;
+    display: none;
   }
 
   .cover__overlay {
